[package]
name = "spacetraders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacedust = "1.0.5"
tokio = { version = "1.28.1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
egui = "0.22.0"